# pyPhoPlaceCellAnalysis

./: .coveragerc  .gitignore  .isort.cfg  CONTRIBUTING.rst  Dockerfile  README.md  environment.yml  plan.md  pyproject.toml  pyrightconfig.json  reconstruction_methods.txt  requirements.txt  rtc_methods.txt  scientific_commit_history_2025_2026.md  setup.cfg  setup.py  tox.ini
.cursor/plans/: REFACTORING_PLAN_PredictiveDecodingDisplayWidget.md  add_decoded_posterior_heatmap_dock_360732ed.plan.md  add_genericsilxcontainer_conformance_to_epoch3dscenetimebinviewer_cce2d31d.plan.md  categorical_colormap_with_saturation_fade_94a8f152.plan.md  fix_disable_segmentation_parameter_propagation_37523a0b.plan.md  fix_rtc_position_range_28a11087.plan.md  fix_slideby_decode_api_4ff396c7.plan.md  make_compute_segment_representative_angles_work_without_segment_idx_d94b4541.plan.md  menu_error_logging_f551db8e.plan.md  preserve_spike_raster_context_title_24697575.plan.md  review_matchingpastfuturepositionsresult_implementation_4ddf3b5e.plan.md
.dvc/: config
.github/workflows/: gpt-commit-date-range-summarizer.yml  gpt-commit-summarizer.yml  python-ast-commit-summarizer.yml
data/: .gitignore  bayes_decoder_test_data.npz.dvc
docs/: conf.py  index.md
notebooks/: template.ipynb
scripts/: batch_run.py  git_commit_summary.py  train_model.py
src/pyphoplacecellanalysis/: __init__.py  temp.py
src/pyphoplacecellanalysis/Analysis/: position_derivatives.py  reconstruction.py  reliability.py
src/pyphoplacecellanalysis/Analysis/Decoder/: StatelessReconstruction.py  computer_vision.py  context_dependent.py  decoder_result.py  decoder_stateless.py  discrete_path_intersection.py  heuristic_replay_scoring.py  reconstruction.py  reconstruction_dst.py  rtc_clusterless_adapters.py  rtc_clusterless_decoder.py  spyglass_clusterless_adapters.py  spyglass_clusterless_decoder.py  transition_matrix.py
src/pyphoplacecellanalysis/GUI/IPyWidgets/: InteractiveRasterBuilderWidget.py  SaveAsWidget.py  pipeline_ipywidgets.py
src/pyphoplacecellanalysis/GUI/Napari/: napari_helpers.py
src/pyphoplacecellanalysis/GUI/Panel/: panel_helpers.py  panel_log_file_tabs_watcher.py  panel_placefield.py
src/pyphoplacecellanalysis/GUI/PyQtPlot/: BinnedImageRenderingWindow.py  MainPipelineWindow.ui  pyqtplot_BackgroundGraphics.py  pyqtplot_CheckTableExample.py  pyqtplot_DataTreeWidget.py  pyqtplot_DockAreaLayouts.py  pyqtplot_Legend.py  pyqtplot_Matrix.py  pyqtplot_RasterPlot.py  pyqtplot_SimplePlot.py  pyqtplot_basic.py
src/pyphoplacecellanalysis/GUI/Qt/: GlobalConnectionManager.py  MainWindowWrapper.py  PhoUIContainer.py  PlacefieldVisualSelectionControlWidget.py  PlacefieldVisualSelectionWidget.py  PlacefieldVisualSelectionWidget.ui  PlacefieldVisualSelectionWidgetBase.py  PlacefieldVisualSelectionWidgetBase.ui  RadialMenu.py  qt_placefield.py
src/pyphoplacecellanalysis/GUI/Silx/: EpochHeuristicPosteriorDebuggerWidget.py  EpochTimeBinViewerWidget.py  RadonTransformDebuggerWidget.py  silx_helpers.py
src/pyphoplacecellanalysis/GUI/Vedo/: Vedo3DStatic.py  VedoMeshManipulatable.py
src/pyphoplacecellanalysis/General/: ComputationResults.py  DataSeriesToSpatial.py  NeuropyPipeline.py  NonInteractiveWrapper.py  PipelineParameterClassTemplating.py  SessionSelectionAndFiltering.py  SpikesDataframeWindow.py  type_aliases.py
src/pyphoplacecellanalysis/General/Batch/: AcrossSessionResults.py  BatchFilesystemFinders.py  LogFileWatcher.py  NeptuneAiHelpers.py  NonInteractiveProcessing.py  NonInteractiveWrapper.py  PhoDiba2023Paper.py  pythonScriptTemplating.py  runBatch.py
src/pyphoplacecellanalysis/General/Configs/: DynamicConfigs.py
src/pyphoplacecellanalysis/General/Decoder/: decoder_result.py
src/pyphoplacecellanalysis/General/Mixins/: AllFunctionEnumeratingMixin.py  AttrsClassHelpers.py  CrossComputationComparisonHelpers.py  DataSeriesColorHelpers.py  DisplayHelpers.py  ExportHelpers.py  InterfaceOptionsProvidingMixin.py  PickleSerializableMixin.py  SpikesRenderingBaseMixin.py  StylesheetThemingHelpers.py  TimeWindowPlaybackMixin.py
src/pyphoplacecellanalysis/General/Model/: ComputationResults.py  Datasources.py  LiveWindowedData.py  RenderDataseries.py  SpecificComputationParameterTypes.py  SpecificComputationValidation.py  SpikesDataframeWindow.py  TimeWindow.py  user_annotations.py
src/pyphoplacecellanalysis/General/Pipeline/: Computation.py  Display.py  Filtering.py  Loading.py  (+1 more)
src/pyphoplacecellanalysis/Pho2D/: data_exporting.py  decoder_difference.py  fig_manager_2d.py  stacked_epoch_slices.py  statistics_plotting_helpers.py  track_shape_drawing.py
src/pyphoplacecellanalysis/Pho3D/: __init__.py  points.py  spikes.py
src/pyphoplacecellanalysis/PhoPositionalData/: import_data.py  load_exported.py  plot_data.py  process_data.py
src/pyphoplacecellanalysis/Resources/: ActionIcons.py  ActionIcons.qrc  GuiResources.py  GuiResources.qrc  __init__.py  icon_helpers.py  silx_resources.qrc  silx_resources_rc.py
src/pyphoplacecellanalysis/SpecificResults/: AcrossSessionResults.py  MovementBurstDetection.py  PendingNotebookCode.py  PhoDiba2023Paper.py  fourthYearPresentation.py
templating/: pyproject_template.toml_template.toml  pyproject_template_dev.toml_fragment  pyproject_template_release.toml_fragment
tests/: .gitignore  2023-11-28_debug_paired_incremental_sort_neurons_data.pkl.dvc  DirectionalLaps_2Hz.pkl.dvc  conftest.py  test_CustomSpikeRasters.py  test_HDF5_functions.py  test_TestDecodedFilterEpochsResult.py  test_VersionedResultMixin.py  test_bapun_clusterless_decoder_resolution.py  test_custom_pyqt_placefield_visibility_control.py  test_decoders.py  test_externalGUI.py  test_git_commit_summary.py  test_heuristic_sequence_partitioning.py  test_menu_error_handling.py  test_paired_incremental_sorting.py  test_peak_prominence2d.py  test_pho_custom_position_decoder.py  test_pickling_results.py  test_rtc_clusterless_decoder.py  test_spyglass_clusterless_decoder.py  test_transition_matrix_2d.py  test_zhang_time_binning.py
typings/pyphoplacecellanalysis/Pho3D/: points.pyi  spikes.pyi
(+392 files in other folders)
