[tool.poetry]
name = "pyphoplacecellanalysis"
version = "0.1.2"
description = ""
authors = ["Pho Hale <halechr@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
param = "^1.12.3"
qtmodern = "^0.2.0"
pandas-flavor = "^0.3.0"
dill = {git = "https://github.com/anivegesana/dill.git", rev = "enums"}
elephant = "^0.11.2"
klepto = "^0.2.3" # {version = "^0.2.3", extras="archives"}
findpeaks = "^2.4.4"
shapely = "^2.0.1"
pybursts = {git = "https://github.com/CommanderPho/pybursts.git"}
pyopengl-accelerate = {version = "^3.1.6", optional = true}
opencv-python = "^4.7.0.68"
sqlalchemy = {version = "^2.0.2", optional = false}
pip = "^23.0"
setuptools = "^67.3.1"
wheel = "^0.38.4"
srsly = "^2.4.5"
tables = "^3.8.0"
hdf5plugin = "^4.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pip = "^23.0"
ipython = "^8.9.0"
viztracer = "^0.15.6"
setuptools = "^67.1.0"
ansi2html = {git = "https://github.com/CommanderPho/ansi2html.git"} # poetry add git+https://github.com/CommanderPho/ansi2html.git

[tool.poetry.group.gui.dependencies]
click = "^8.1.3"
pyqt5 = "5.15.7"
pyqt-checkbox-table-widget = "^0.0.14"
pyqt5-qt5 = "^5.15.2"
pyqt-custom-titlebar-window = "^0.0.50"
qtawesome = "^1.2.2"
pyvista = "0.36.*"
pyvistaqt = "^0.9.0"
loguru = "^0.6.0" # required for mpl-multitab
pyopengl = "^3.1.6"
# haesleinhuepf-pyqode-python = {git = "https://github.com/CommanderPho/pyqode.python.git"}
mpl-multitab = {git = "https://github.com/CommanderPho/mpl-multitab.git"} # poetry add git+https://github.com/CommanderPho/mpl-multitab.git
vedo = {git = "https://github.com/CommanderPho/vedo.git", rev = "release/pho-working"} # poetry add git+https://github.com/CommanderPho/vedo.git#release/pho-working

# [tool.poetry.group.remote.dependencies]
# pyphocorehelpers = {git = "https://github.com/CommanderPho/pyPhoCoreHelpers.git"}
# neuropy = {git = "https://github.com/CommanderPho/NeuroPy.git"} # , rev = "main", extras = ["acceleration"]

[tool.poetry.group.local.dependencies]
neuropy = {path = "../NeuroPy", develop=true} # , rev = "main", extras = ["acceleration"]
pyphocorehelpers = {path = "../pyPhoCoreHelpers", develop=true}

[tool.poetry.group.testing.dependencies]
mplcursors = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
